--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.13"
 prometheus-client = "^0.21.0"
+pydantic = "^2.9.2"
+pandas = "^2.2.3"
 
 
 [build-system]
