We need to use a bind mount to mount the /opt/minecraft dir on the host to the container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,10 @@ services:
       - "8000:8000"
     networks:
       - dashboard
+    volumes:
+      - type: bind
+        source: /opt/minecraft
+        target: /opt/minecraft
   grafana:
     container_name: grafana
     image: grafana
