--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -612,10 +612,10 @@
 #################################### Anonymous Auth ######################
 [auth.anonymous]
 # enable anonymous access
-enabled = true
+enabled = false
 
 # specify organization name that should be used for unauthenticated users
-org_name = Main Org.
+# org_name = Main Org.
 
 # specify role for unauthenticated users
 ;org_role = Viewer
