Install the business variable panel so we can filter metrics by player name

--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -7,3 +7,5 @@ COPY ./dashboard.yaml /etc/grafana/provisioning/dashboards/
 COPY ./datasources.yaml /etc/grafana/provisioning/datasources/
 
 COPY ./grafana.ini /etc/grafana/
+
+RUN grafana-cli plugins install volkovlabs-variable-panel
